--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!--<android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize">
-
-    </android.support.v7.widget.Toolbar>-->
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/bloggerImageView"
@@ -18,131 +10,133 @@
         android:layout_height="95dp"
         android:layout_below="@+id/toolbar"
         android:layout_margin="15dp"
-        android:src="@drawable/family_xxhdpi"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:src="@drawable/family_xxhdpi" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/camera_icon"
         android:layout_alignBottom="@+id/bloggerImageView"
+        android:layout_alignEnd="@+id/bloggerImageView"
         android:layout_alignRight="@+id/bloggerImageView"
-        android:layout_alignEnd="@+id/bloggerImageView" />
+        android:src="@drawable/camera_icon" />
+
     <RelativeLayout
+        android:id="@+id/infoRelativeLL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:layout_toRightOf="@id/bloggerImageView"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="22.67dp"
         android:layout_marginRight="5dp"
-        android:id="@+id/infoRelativeLL"
+        android:layout_marginTop="22.67dp"
+        android:layout_toRightOf="@+id/bloggerImageView">
 
-        >
         <LinearLayout
+            android:id="@+id/rankLinearLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_toRightOf="@+id/FollowersLinearLL"
-            android:id="@+id/rankLinearLL"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/followTextView"
-            android:layout_toStartOf="@+id/followTextView">
+            android:layout_toRightOf="@+id/FollowersLinearLL"
+            android:layout_toStartOf="@+id/followTextView"
+            android:orientation="vertical">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="--"
-                android:gravity="center"
-                android:textSize="32sp"
                 android:id="@+id/rankingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:text="--"
+                android:textSize="32sp" />
 
-                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Rank"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textColor="@color/grey_faded"
                 android:layout_marginTop="8.33dp"
-
-                />
+                android:gravity="center"
+                android:text="Rank"
+                android:textColor="@color/grey_faded"
+                android:textSize="13sp" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/FollowersLinearLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/FollowersLinearLL"
-
             android:layout_alignLeft="@+id/followingTextView1"
+
             android:layout_alignStart="@+id/followingTextView1"
             android:layout_toLeftOf="@+id/FollowingLinearLL"
-            android:layout_toStartOf="@+id/FollowingLinearLL">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="--"
-                android:gravity="center"
-                android:textSize="32sp"
-                android:id="@+id/followersTextView"
-                android:fontFamily="sans-serif-thin"
+            android:layout_toStartOf="@+id/FollowingLinearLL"
+            android:orientation="vertical">
 
-                />
+            <TextView
+                android:id="@+id/followersTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:text="--"
+                android:textSize="32sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Followers"
+                android:layout_marginTop="8.33dp"
                 android:gravity="center"
-                android:textSize="13sp"
+                android:text="Followers"
                 android:textColor="@color/grey_faded"
-                android:layout_marginTop="8.33dp"/>
+                android:textSize="13sp" />
         </LinearLayout>
+
         <LinearLayout
+            android:id="@+id/FollowingLinearLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/FollowingLinearLL"
             android:layout_alignParentRight="true"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="--"
-                android:textSize="32sp"
-                android:gravity="center"
-                android:id="@+id/followingTextView"
-                android:fontFamily="sans-serif-thin"
+            android:orientation="vertical">
 
-                />
+            <TextView
+                android:id="@+id/followingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:text="--"
+                android:textSize="32sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Followings"
-                android:textSize="13sp"
+                android:layout_marginTop="8.33dp"
                 android:gravity="center"
+                android:text="Followings"
                 android:textColor="@color/grey_faded"
-                android:layout_marginTop="8.33dp"/>
+                android:textSize="13sp" />
         </LinearLayout>
+
         <TextView
+            android:id="@+id/editProfileTextView"
             android:layout_width="match_parent"
             android:layout_height="33dp"
             android:layout_below="@+id/rankLinearLL"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edit_button_bg"
+            android:backgroundTint="#ededed"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
             android:text="EDIT YOUR PROFILE"
             android:textColor="#525252"
             android:textSize="14sp"
-            android:fontFamily="sans-serif"
-            android:layout_marginRight="5dp"
-            android:gravity="center"
+            android:visibility="visible" />
 
-            android:layout_marginTop="5dp"
-            android:id="@+id/editProfileTextView"
-            android:visibility="visible"
-            android:background="@drawable/edit_button_bg"
-            android:backgroundTint="#ededed"/>
         <TextView
             android:id="@+id/followTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/rankLinearLL"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
@@ -156,13 +150,13 @@
             android:text="FOLLOW"
             android:textColor="@color/blog.comments.follow_reply_btn"
             android:textSize="14sp"
-            android:layout_below="@+id/rankLinearLL"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/followingTextView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/rankLinearLL"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
@@ -174,23 +168,22 @@
             android:text="FOLLOWING"
             android:textColor="@color/blog.comments.follow_reply_btn"
             android:textSize="14sp"
-            android:layout_below="@+id/rankLinearLL"
-            android:visibility="invisible"
-            />
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/userBio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textSize="15sp"
         android:layout_below="@+id/infoRelativeLL"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
-        android:visibility="gone"
-        android:id="@+id/userBio"/>
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-light"
+        android:textSize="15sp"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/more_text"
         android:layout_width="wrap_content"
@@ -205,21 +198,23 @@
         android:text="More"
         android:textColor="@color/red_selected"
         android:visibility="visible" />
+
     <TextView
+        android:id="@+id/blogName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textSize="17sp"
-        android:visibility="visible"
-        android:maxLines="1"
         android:layout_below="@+id/userBio"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
+        android:maxLines="1"
         android:textColor="@color/black_color"
-        android:id="@+id/blogName"
-        android:layout_marginBottom="10dp"/>
+        android:textSize="17sp"
+        android:visibility="visible" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -312,41 +307,45 @@
         android:layout_height="1dp"
         android:layout_below="@id/tabs"
         android:background="@color/login_grey" />
+
     <TextView
         android:id="@+id/noDraftsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Drafts have been saved yet"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Drafts have been saved yet"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/noArticlesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Articles Published"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Articles Published"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/noCommentsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Comments available"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Comments available"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/noReviewTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Reviews available"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Reviews available"
+        android:visibility="gone" />
 
 </RelativeLayout>
