--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <!--<android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -18,171 +19,182 @@
         android:layout_height="95dp"
         android:layout_below="@+id/toolbar"
         android:layout_margin="15dp"
-        android:src="@drawable/family_xxhdpi"
         android:layout_marginTop="10dp"
-        />
+        android:src="@drawable/family_xxhdpi" />
 
     <RelativeLayout
+        android:id="@+id/infoRelativeLL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:layout_toRightOf="@id/bloggerImageView"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="22.67dp"
         android:layout_marginRight="5dp"
-        android:id="@+id/infoRelativeLL"
+        android:layout_marginTop="22.67dp"
+        android:layout_toRightOf="@id/bloggerImageView"
 
         >
+
         <LinearLayout
+            android:id="@+id/rankLinearLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_toRightOf="@+id/FollowersLinearLL"
-            android:id="@+id/rankLinearLL"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/followTextView"
-            android:layout_toStartOf="@+id/followTextView">
+            android:layout_toRightOf="@+id/FollowersLinearLL"
+            android:layout_toStartOf="@+id/followTextView"
+            android:orientation="vertical">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="--"
-                android:gravity="center"
-                android:textSize="32sp"
                 android:id="@+id/rankingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:text="--"
+                android:textSize="32sp"
 
                 />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Rank"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textColor="@color/grey_faded"
                 android:layout_marginTop="8.33dp"
+                android:gravity="center"
+                android:text="Rank"
+                android:textColor="@color/grey_faded"
+                android:textSize="13sp"
 
                 />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:id="@+id/FollowersLinearLL"
-
-            android:layout_alignLeft="@+id/followingTextView1"
-            android:layout_alignStart="@+id/followingTextView1"
-            android:layout_toLeftOf="@+id/FollowingLinearLL"
-            android:layout_toStartOf="@+id/FollowingLinearLL">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="--"
-                android:gravity="center"
-                android:textSize="32sp"
-                android:id="@+id/followersTextView"
-                android:fontFamily="sans-serif-thin"
-
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Followers"
-                android:gravity="center"
-                android:textSize="13sp"
-                android:textColor="@color/grey_faded"
-                android:layout_marginTop="8.33dp"/>
-        </LinearLayout>
-        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/FollowingLinearLL"
-            android:layout_alignParentRight="true"
-           >
+            android:layout_alignLeft="@+id/followTextView"
+            android:layout_alignStart="@+id/followTextView"
+            android:layout_toLeftOf="@+id/FollowingLinearLL"
+            android:layout_toStartOf="@+id/FollowingLinearLL"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/followersTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="center"
+                android:text="--"
+                android:textSize="32sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="8.33dp"
+                android:gravity="center"
+                android:text="Followers"
+                android:textColor="@color/grey_faded"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/FollowingLinearLL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/followingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-thin"
+                android:gravity="center"
                 android:text="--"
                 android:textSize="32sp"
-                android:gravity="center"
-                android:id="@+id/followingTextView"
-                android:fontFamily="sans-serif-thin"
 
                 />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Followings"
-                android:textSize="13sp"
+                android:layout_marginTop="8.33dp"
                 android:gravity="center"
+                android:text="Followings"
                 android:textColor="@color/grey_faded"
-                android:layout_marginTop="8.33dp"/>
+                android:textSize="13sp" />
         </LinearLayout>
+
         <TextView
+            android:id="@+id/editProfileTextView"
             android:layout_width="match_parent"
             android:layout_height="33dp"
             android:layout_below="@+id/rankLinearLL"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="#ededed"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
             android:text="EDIT YOUR PROFILE"
             android:textColor="#525252"
             android:textSize="14sp"
-            android:fontFamily="sans-serif"
-            android:layout_marginRight="5dp"
-            android:gravity="center"
-            android:background="#ededed"
-            android:layout_marginTop="5dp"
-            android:id="@+id/editProfileTextView"
-            android:visibility="gone"/>
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/followTextView"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/rankLinearLL"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/follow_button_bg"
             android:gravity="center"
             android:paddingBottom="8dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:paddingTop="8dp"
-            android:text="FOLLOW"
+            android:text="Follow"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="10sp"
-            android:layout_below="@+id/rankLinearLL"
-            android:visibility="visible"/>
+            android:textSize="12sp"
+            android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/followingTextView1"
-            android:layout_width="90dp"
+            android:id="@+id/unfollowTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/rankLinearLL"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/following_button_bg"
             android:gravity="center"
-            android:textColor="@color/white_color"
-            android:text="FOLLOWING"
-            android:textSize="10sp"
-            android:background="@drawable/follow_button_bg"
-            android:backgroundTint="@color/blog.comments.follow_reply_btn"
-            android:foregroundGravity="center"
             android:paddingBottom="8dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:paddingTop="8dp"
-            android:layout_below="@+id/rankLinearLL"
-            android:visibility="visible"
-            />
+            android:text="Following"
+            android:textColor="@color/white_color"
+            android:textSize="12sp"
+            android:visibility="invisible" />
 
     </RelativeLayout>
+
     <TextView
+        android:id="@+id/userBio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textSize="15sp"
         android:layout_below="@+id/infoRelativeLL"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
-        android:visibility="gone"
-        android:id="@+id/userBio"/>
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-light"
+        android:textSize="15sp"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/more_text"
         android:layout_width="wrap_content"
@@ -196,22 +208,24 @@
         android:paddingTop="2dp"
         android:text="More"
         android:textColor="@color/red_selected"
-        android:visibility="visible" />
+        android:visibility="invisible" />
+
     <TextView
+        android:id="@+id/blogName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textSize="17sp"
-        android:visibility="visible"
-        android:maxLines="1"
         android:layout_below="@+id/userBio"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
+        android:maxLines="1"
         android:textColor="@color/black_color"
-        android:id="@+id/blogName"
-        android:layout_marginBottom="10dp"/>
+        android:textSize="17sp"
+        android:visibility="visible" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -305,41 +319,45 @@
         android:layout_height="1dp"
         android:layout_below="@id/tabs"
         android:background="@color/login_grey" />
+
     <TextView
         android:id="@+id/noDraftsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Drafts have been saved yet"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Drafts have been saved yet"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/noArticlesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Articles Published"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Articles Published"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/noCommentsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Comments available"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Comments available"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/noReviewTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Reviews available"
-        android:visibility="gone"
         android:layout_below="@+id/tabs"
-        android:layout_marginTop="5dp"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:text="No Reviews available"
+        android:visibility="gone" />
 
 </RelativeLayout>
