--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -10,21 +11,21 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:visibility="visible"/>
+        android:visibility="gone" />
 
-   <!-- <View
-        android:id="@+id/dummy_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/toolbar"
-        android:layout_alignParentTop="true"
-        android:background="#DEDEDE" />-->
+    <!-- <View
+         android:id="@+id/dummy_line"
+         android:layout_width="match_parent"
+         android:layout_height="1dp"
+         android:layout_below="@id/toolbar"
+         android:layout_alignParentTop="true"
+         android:background="#DEDEDE" />-->
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
 
         <com.mycity4kids.observablescrollview.ObservableListView
             android:id="@+id/scroll"
