--- a/MyCity4Kids/MyCity4Kids/res/layout/parenting_blog_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/parenting_blog_home.xml
@@ -2,8 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:background="@color/blogger_listing_bg"
     android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:visibility="visible"
+        />
 
     <ListView
         android:id="@+id/blog_listing"
@@ -11,7 +21,8 @@
         android:layout_height="match_parent"
         android:background="@color/blogger_listing_bg"
         android:divider="@color/blogger_listing_bg"
-        android:dividerHeight="5dp" />
+        android:dividerHeight="5dp"
+        android:layout_below="@+id/toolbar"/>
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
@@ -51,5 +62,42 @@
             android:layout_toLeftOf="@id/txvLoadMore"
             android:src="@drawable/progress_spinner" />
     </RelativeLayout>
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fab_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        fab:fab_addButtonColorNormal="@color/primary"
+        fab:fab_addButtonColorPressed="@color/primary_dark"
+        fab:fab_addButtonPlusIconColor="@color/white_color"
+        fab:fab_addButtonStrokeVisible="false"
+        fab:fab_labelStyle="@style/menu_labels_style"
+        fab:fab_labelsPosition="left"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true">
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/rankSortFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/primary"
+            fab:fab_colorPressed="@color/primary_dark"
+            fab:fab_icon="@drawable/threebar_nav"
+            fab:fab_plusIconColor="@color/white_color"
+            fab:fab_size="mini"
+            fab:fab_title="Rank" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/nameSortFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/primary"
+            fab:fab_colorPressed="@color/primary_dark"
+            fab:fab_icon="@drawable/threebar_nav"
+            fab:fab_plusIconColor="@color/white_color"
+            fab:fab_size="mini"
+            fab:fab_title="Name" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
