--- a/MyCity4Kids/MyCity4Kids/res/layout/contributor_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/contributor_list_item.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:paddingBottom="5dp"
+    android:paddingBottom="2dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="5dp">
+    android:paddingTop="2dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -27,8 +27,7 @@
                     android:id="@+id/bloggerImageView"
                     android:layout_width="63dp"
                     android:layout_height="63dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/default_commentor_img" />
+                    android:layout_marginLeft="10dp" />
 
                 <TextView
                     android:id="@+id/bloggerName"
@@ -55,26 +54,33 @@
                     android:textColor="@color/blue_color"
                     android:textSize="13sp" />
 
-                <TextView
-                    android:id="@+id/rank"
+                <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="sans-serif-thin"
-                    android:text="1"
-                    android:textSize="22sp" />
+                    android:layout_marginRight="5dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/rank"
-                    android:layout_marginRight="5dp"
-                    android:fontFamily="sans-serif-thin"
-                    android:text="rank"
-                    android:textSize="10sp" />
+                    <TextView
+                        android:id="@+id/rank"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="sans-serif-thin"
+                        android:text="1"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_below="@+id/rank"
+                        android:layout_marginRight="5dp"
+                        android:fontFamily="sans-serif-thin"
+                        android:text="rank"
+                        android:textSize="10sp"
+                        android:id="@+id/rankText"/>
+                </RelativeLayout>
             </RelativeLayout>
 
             <TextView
@@ -83,6 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/topContainer"
                 android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
                 android:layout_marginTop="12dp"
                 android:fontFamily="sans-serif-light"
                 android:lines="2"
@@ -96,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@+id/bloggerBio"
-                android:background="@color/grey_blogger_listing" />
+                android:background="@color/login_grey" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -107,6 +115,7 @@
                 android:gravity="center_vertical">
 
                 <TextView
+                    android:id="@+id/followersCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_followers"
@@ -125,7 +134,27 @@
                     android:layout_marginRight="10dp"
                     android:text="FOLLOW"
                     android:textColor="@color/blog.comments.follow_reply_btn"
-                    android:textSize="13sp" />
+                    android:textSize="13sp"
+                    android:visibility="visible"/>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLoadingView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/imgLoader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/progress_spinner"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
+                </RelativeLayout>
 
             </RelativeLayout>
 
