--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
@@ -245,25 +245,25 @@
                     android:textColor="@color/new_blue" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/share_spouse"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/trendingArticles"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp"
-                android:background="#224cf0"
-                android:padding="10dp"
-                android:text="Share with Spouse/Guardian"
-                android:textAllCaps="false"
-                android:visibility="gone"/>
+            <!--<Button-->
+                <!--android:id="@+id/share_spouse"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@+id/trendingArticles"-->
+                <!--android:layout_marginLeft="5dp"-->
+                <!--android:layout_marginRight="5dp"-->
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:background="#224cf0"-->
+                <!--android:padding="10dp"-->
+                <!--android:text="Share with Spouse/Guardian"-->
+                <!--android:textAllCaps="false"-->
+                <!--android:visibility="gone"/>-->
 
             <LinearLayout
                 android:id="@+id/commnetLout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/share_spouse"
+                android:layout_below="@+id/trendingArticles"
                 android:minHeight="5dp"
                 android:orientation="vertical"
                 android:padding="5dp">
