Camera image issue + floating image button + search action at every listing WIP

--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
@@ -380,7 +380,7 @@
             android:visibility="gone" />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <ImageView
         android:id="@+id/user_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
