--- a/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/custom_comment_cell.xml
@@ -104,7 +104,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/comments_reply_bg"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/replyUserImageView"
