--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_comments_replies_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_comments_replies_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/inner_comment_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,50 +22,6 @@
         android:paddingRight="10dp"
         android:paddingTop="8dp">
 
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/network_img"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="@string/author_img"
-            android:src="@drawable/default_commentor_img"
-            android:visibility="visible"
-            app:civ_border="true"
-            app:civ_border_color="@color/white_color"
-            app:civ_border_width="0dp"
-            app:civ_shadow="true"
-            app:civ_shadow_color="@color/grey"
-            app:civ_shadow_radius="4" />
-
-
-        <TextView
-            android:id="@+id/txvCommentTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/network_img"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:paddingLeft="8dp"
-            android:singleLine="false"
-            android:text="@string/title"
-            android:textColor="@color/black_color"
-            android:textSize="17sp" />
-
-        <TextView
-            android:id="@+id/txvDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/txvCommentTitle"
-            android:layout_alignStart="@+id/txvCommentTitle"
-            android:layout_below="@+id/txvCommentTitle"
-            android:fontFamily="sans-serif-thin"
-            android:paddingLeft="8dp"
-            android:text="date"
-            android:textColor="@color/blog.comments.date_comment_text"
-            android:textSize="14sp" />
-
         <EditText
             android:id="@+id/commentReplyEditText"
             android:layout_width="match_parent"
@@ -74,32 +29,37 @@
             android:layout_alignLeft="@+id/txvCommentTitle"
             android:layout_alignStart="@+id/txvCommentTitle"
             android:layout_below="@id/network_img"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edit_comment_reply_box"
             android:fontFamily="sans-serif-thin"
+            android:maxLines="6"
+            android:minHeight="80dp"
+            android:paddingBottom="6dp"
             android:paddingLeft="8dp"
-            android:singleLine="false"
+            android:paddingTop="6dp"
             android:textColor="@color/black_color"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txvCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/commentReplyEditText"
+            android:layout_marginRight="22dp"
+            android:layout_toLeftOf="@+id/txvUpdate"
+            android:padding="5dp"
+            android:text="CANCEL"
+            android:textColor="@color/grey"
             android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txvUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/commentReplyEditText"
-            android:layout_marginRight="22dp"
-            android:layout_toLeftOf="@+id/txvReply"
-            android:padding="5dp"
-            android:text="UPDATE"
-            android:textColor="@color/grey"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/txvReply"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/commentReplyEditText"
             android:padding="5dp"
-            android:text="REPLY"
+            android:text="UPDATE"
             android:textColor="@color/blog.comments.follow_reply_btn"
             android:textSize="14sp" />
     </RelativeLayout>
