--- a/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
@@ -79,43 +79,50 @@
         android:layout_centerVertical="true"
         android:visibility="invisible" />
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
-        fab:fab_addButtonColorNormal="@color/primary"
-        fab:fab_addButtonColorPressed="@color/primary_dark"
-        fab:fab_addButtonPlusIconColor="@color/white_color"
-        fab:fab_addButtonStrokeVisible="false"
-        fab:fab_labelStyle="@style/menu_labels_style"
-        fab:fab_labelsPosition="left"
-        android:layout_alignBottom="@+id/scroll"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B3000000">
+        <!--  floating action menu with buttons -->
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/recentSortFAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/primary"
-            fab:fab_colorPressed="@color/primary_dark"
-            fab:fab_icon="@drawable/threebar_nav"
-            fab:fab_plusIconColor="@color/white_color"
-            fab:fab_size="mini"
-            fab:fab_title="Recent" />
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:id="@+id/fab_menu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/scroll"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right|bottom"
+            fab:fab_addButtonColorNormal="@color/fab.pink"
+            fab:fab_addButtonColorPressed="@color/fab.pink"
+            fab:fab_addButtonPlusIconColor="@color/white_color"
+            fab:fab_addButtonStrokeVisible="false"
+            fab:fab_labelStyle="@style/menu_labels_style"
+            fab:fab_labelsPosition="left">
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/popularSortFAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/primary"
-            fab:fab_colorPressed="@color/primary_dark"
-            fab:fab_icon="@drawable/threebar_nav"
-            fab:fab_plusIconColor="@color/white_color"
-            fab:fab_size="mini"
-            fab:fab_title="Popular" />
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/recentSortFAB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_colorNormal="@color/fab.pink"
+                fab:fab_colorPressed="@color/fab.pink"
+                fab:fab_icon="@drawable/recent"
+                fab:fab_plusIconColor="@color/white_color"
+                fab:fab_size="mini"
+                fab:fab_title="Recent" />
 
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/popularSortFAB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_colorNormal="@color/fab.pink"
+                fab:fab_colorPressed="@color/fab.pink"
+                fab:fab_icon="@drawable/popular"
+                fab:fab_plusIconColor="@color/white_color"
+                fab:fab_size="mini"
+                fab:fab_title="Popular" />
 
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+    </FrameLayout>
 </RelativeLayout>
