--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
@@ -36,30 +36,30 @@
             android:layout_above="@+id/connect_facebook"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="28dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="Blogs, Videos amp Experts"
             android:textColor="@color/white_color"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/connect_facebook"
-            android:layout_width="140dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/txvLogin"
             android:layout_alignParentLeft="true"
             android:layout_gravity="center"
             android:layout_marginLeft="30dp"
+            android:drawablePadding="-14dp"
             android:background="@drawable/facebook_rounded_corners_transparent"
             android:drawableLeft="@drawable/ic_facebook_white_48dp"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:paddingBottom="6dp"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:paddingTop="6dp"
             android:text="Facebook"
             android:textColor="@color/white_color"
@@ -67,19 +67,19 @@
 
         <TextView
             android:id="@+id/connect_gplus"
-            android:layout_width="140dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/txvLogin"
             android:layout_alignParentRight="true"
             android:layout_gravity="center"
             android:layout_marginRight="30dp"
+            android:drawablePadding="-14dp"
             android:background="@drawable/facebook_rounded_corners_transparent"
             android:drawableLeft="@drawable/ic_gplus_white_48dp"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:paddingBottom="6dp"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
             android:paddingTop="6dp"
             android:text="Google +"
             android:textColor="@color/white_color"
@@ -110,16 +110,16 @@
 
             <ImageView
                 android:id="@+id/one"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
                 android:alpha="0.2"
                 android:src="@drawable/white_filled_bg"
                 android:tag="1" />
 
             <ImageView
                 android:id="@+id/two"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:alpha="0.2"
@@ -128,8 +128,8 @@
 
             <ImageView
                 android:id="@+id/three"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
                 android:alpha="0.2"
                 android:src="@drawable/white_filled_bg"
                 android:tag="3" />
