--- a/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/new_article_details_activity.xml
@@ -246,18 +246,18 @@
             </LinearLayout>
 
             <!--<Button-->
-                <!--android:id="@+id/share_spouse"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_below="@+id/trendingArticles"-->
-                <!--android:layout_marginLeft="5dp"-->
-                <!--android:layout_marginRight="5dp"-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:background="#224cf0"-->
-                <!--android:padding="10dp"-->
-                <!--android:text="Share with Spouse/Guardian"-->
-                <!--android:textAllCaps="false"-->
-                <!--android:visibility="gone"/>-->
+            <!--android:id="@+id/share_spouse"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/trendingArticles"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:background="#224cf0"-->
+            <!--android:padding="10dp"-->
+            <!--android:text="Share with Spouse/Guardian"-->
+            <!--android:textAllCaps="false"-->
+            <!--android:visibility="gone"/>-->
 
             <LinearLayout
                 android:id="@+id/commnetLout"
@@ -338,9 +338,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".87"
                 android:background="@drawable/edit_text"
-                android:capitalize="sentences"
                 android:gravity="top|left"
                 android:hint="@string/write_comment"
+                android:maxLines="4"
                 android:padding="12dp"
                 android:singleLine="false"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -349,8 +349,9 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:layout_weight=".13"
+                android:layout_gravity="bottom"
                 android:background="@color/blog.comments.addcomment_button"
                 android:gravity="center">
 
