--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard_public.xml
@@ -3,15 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--<android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize">
-
-    </android.support.v7.widget.Toolbar>-->
 
     <ImageView
         android:id="@+id/bloggerImageView"
@@ -30,9 +21,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
-        android:layout_toRightOf="@id/bloggerImageView"
-
-        >
+        android:layout_toRightOf="@id/bloggerImageView">
 
         <LinearLayout
             android:id="@+id/rankLinearLL"
@@ -51,9 +40,7 @@
                 android:fontFamily="sans-serif-thin"
                 android:gravity="center"
                 android:text="--"
-                android:textSize="32sp"
-
-                />
+                android:textSize="32sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -62,9 +49,7 @@
                 android:gravity="center"
                 android:text="Rank"
                 android:textColor="@color/grey_faded"
-                android:textSize="13sp"
-
-                />
+                android:textSize="13sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -110,9 +95,7 @@
                 android:fontFamily="sans-serif-thin"
                 android:gravity="center"
                 android:text="--"
-                android:textSize="32sp"
-
-                />
+                android:textSize="32sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -141,7 +124,7 @@
 
         <TextView
             android:id="@+id/followTextView"
-            android:layout_width="90dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/rankLinearLL"
             android:layout_centerInParent="true"
@@ -149,15 +132,14 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
-            android:background="@drawable/follow_button_bg"
             android:gravity="center"
             android:paddingBottom="8dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="8dp"
-            android:text="Follow"
+            android:text="FOLLOW"
             android:textColor="@color/blog.comments.follow_reply_btn"
-            android:textSize="12sp"
+            android:textSize="16sp"
             android:visibility="invisible" />
 
         <TextView
@@ -170,15 +152,14 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="4dp"
-            android:background="@drawable/following_button_bg"
             android:gravity="center"
             android:paddingBottom="8dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="8dp"
-            android:text="Following"
-            android:textColor="@color/white_color"
-            android:textSize="12sp"
+            android:text="FOLLOWING"
+            android:textColor="@color/blog.comments.follow_reply_btn"
+            android:textSize="16sp"
             android:visibility="invisible" />
 
     </RelativeLayout>
