--- a/MyCity4Kids/MyCity4Kids/res/layout/parenting_blog_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/parenting_blog_home.xml
@@ -24,6 +24,14 @@
         android:divider="@color/blogger_listing_bg"
         android:dividerHeight="5dp" />
 
+    <TextView
+        android:id="@+id/noBlogsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No result found."
+        android:visibility="gone" />
+
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
         android:layout_width="match_parent"
@@ -67,7 +75,8 @@
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#B3000000">
+        android:background="#B3000000"
+        android:visibility="gone">
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/fab_menu"
