--- a/MyCity4Kids/WordPressEditor/src/main/res/menu/menu_editor.xml
+++ b/MyCity4Kids/WordPressEditor/src/main/res/menu/menu_editor.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:myapp="http://schemas.android.com/apk/res-auto" >
-    <item android:id="@+id/draft"
+    xmlns:myapp="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/draft"
         android:title="@string/string_draft"
+        myapp:showAsAction="always" />
 
-        myapp:showAsAction="always"/>
-
-    <item android:id="@+id/publish"
+    <item
+        android:id="@+id/publish"
         android:title="@string/string_publish"
-
-        myapp:showAsAction="always"/>
+        myapp:showAsAction="always" />
 </menu>
